2008-02-18  Jonathon Jongsma  <jjongsma@gnome.org>

	* gtk/gtkmm/stock.h: update gtk stock icon names

2008-02-18  Jonathon Jongsma  <jjongsma@gnome.org>

	* docs/reference/Makefile.am:
	* gtk/gtkmm/stock.h:
	* gtk/src/calendar.hg:
	* gtk/src/entry.hg:
	* gtk/src/progressbar.hg:
	* gtk/src/spinbutton.hg:
	* gtk/src/textview.hg: add a few more widget images to the API documentation

2008-02-18  Jonathon Jongsma  <jjongsma@gnome.org>

	* docs/reference/Doxyfile.in: add an image directory with widget screenshots
	to the doxygen config file
	* gtk/src/arrow.hg:
	* gtk/src/button.hg:
	* gtk/src/buttonbox.hg:
	* gtk/src/checkbutton.hg:
	* gtk/src/colorbutton.hg:
	* gtk/src/combobox.hg:
	* gtk/src/comboboxentry.hg:
	* gtk/src/filechooserbutton.hg:
	* gtk/src/fontbutton.hg:
	* gtk/src/image.hg:
	* gtk/src/label.hg:
	* gtk/src/linkbutton.hg:
	* gtk/src/menubar.hg:
	* gtk/src/radiobutton.hg:
	* gtk/src/scale.hg:
	* gtk/src/scrollbar.hg:
	* gtk/src/separator.hg:
	* gtk/src/statusbar.hg: add a widget screenshot to the class overview
	documentation.
	* docs/reference/images/widgets/*.png: add screenshots of some common
	widgets.  More will come eventually.

2008-02-02  Kjartan Maraas  <kmaraas@gnome.org>

	* demos/gtk-demo/demowindow.cc:
	* demos/gtk-demo/textwidget.cc:
	* examples/book/custom/custom_widget/mywidget.cc:
	Fix build with GCC 4.3.

2008-01-26  Murray Cumming  <murrayc@murrayc.com>

	* atk/src/action.hg:
	* atk/src/editabletext.hg:
	* atk/src/image.hg:
	* atk/src/object.hg:
	* atk/src/streamablecontent.hg:
	* gtk/src/celllayout.hg:
	* gtk/src/cellrenderer.hg:
	* gtk/src/cellrendereraccel.hg:
	* gtk/src/cellrenderertext.hg:
	* gtk/src/cellrenderertoggle.hg:
	* gtk/src/entry.hg:
	* gtk/src/entrycompletion.hg:
	* gtk/src/recentchooser.hg:
	* gtk/src/statusbar.hg:
	* gtk/src/style.hg:
	* gtk/src/textview.hg: Added conversions from const gchar* to const ustring&, 
	to fix the build I guess I removed this from a convert_*.m4 file, to discourage  