@@ -17,6 +17,7 @@
 #include <gtkmm.h>
 #include <stdlib.h>
 #include <math.h>
+#include "demo-common.h"
 
 #define FRAME_DELAY 50
 
@@ -109,10 +110,10 @@ void Example_Pixbufs::load_pixbufs()
   std::string filename_background = BACKGROUND_NAME;
 
   #ifdef GLIBMM_EXCEPTIONS_ENABLED
-  m_refPixbuf_Background = Gdk::Pixbuf::create_from_file(filename_background);
+  m_refPixbuf_Background = Gdk::Pixbuf::create_from_file(demo_find_file(filename_background));
   #else
   std::auto_ptr<Glib::Error> error;
-  m_refPixbuf_Background = Gdk::Pixbuf::create_from_file(filename_background, error);
+  m_refPixbuf_Background = Gdk::Pixbuf::create_from_file(demo_find_file(filename_background), error);
   #endif //GLIBMM_EXCEPTIONS_ENABLED
 
   m_back_width = m_refPixbuf_Background->get_width();
@@ -123,10 +124,10 @@ void Example_Pixbufs::load_pixbufs()
     std::string filename = image_names[i];
 
     #ifdef GLIBMM_EXCEPTIONS_ENABLED
-    Glib::RefPtr<Gdk::Pixbuf> pixbuf = Gdk::Pixbuf::create_from_file(filename);
+    Glib::RefPtr<Gdk::Pixbuf> pixbuf = Gdk::Pixbuf::create_from_file(demo_find_file(filename));
     #else
     std::auto_ptr<Glib::Error> error;
-    Glib::RefPtr<Gdk::Pixbuf> pixbuf = Gdk::Pixbuf::create_from_file(filename, error);
+    Glib::RefPtr<Gdk::Pixbuf> pixbuf = Gdk::Pixbuf::create_from_file(demo_find_file(filename), error);
     #endif //GLIBMM_EXCEPTIONS_ENABLED
 
     m_images[i] = pixbuf;
