@@ -1,5 +1,15 @@
 2008-02-18  Jonathon Jongsma  <jjongsma@gnome.org>
 
+	patch by: Chris Wang <chris.wang@sun.com>
+
+	* demos/gtk-demo/demowindow.cc:
+	* demos/gtk-demo/example_images.cc:
+	* demos/gtk-demo/example_pixbufs.cc:
+	* demos/gtk-demo/example_textview.cc: fix gtkmm demo program to be able to
+	find the source and image files when not run from the source directory
+
+2008-02-18  Jonathon Jongsma  <jjongsma@gnome.org>
+
 	* gtk/gtkmm/stock.h: update gtk stock icon names
 
 2008-02-18  Jonathon Jongsma  <jjongsma@gnome.org>
